<resources>
    <string name="app_name">Shopping list</string>
    <string name="listNameInput">Enter New List Name</string>
    <string name="listItemInput">Enter New Item Name</string>
    <string name="shoppingListBreak">My Shopping List</string>
    <string name="saveButton">Save</string>
    <string name="cancelButton">Cancel</string>
    <string name="row1">Empty</string>
    <string name="row2">Empty</string>
    <string name="row3">Empty</string>
    <string name="row4">Empty</string>
    <string name="row5">Empty</string>

</resources>