<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/rowItem5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="none"
        android:minHeight="48dp"
        android:text="@string/row5"
        android:editable="false"
        app:layout_constraintEnd_toStartOf="@+id/qty5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rowItem4"
        tools:ignore="Deprecated" />

    <EditText
        android:id="@+id/qty5"
        android:layout_width="91dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="QTY"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.802"
        app:layout_constraintStart_toEndOf="@+id/rowItem5"
        app:layout_constraintTop_toBottomOf="@+id/qty4" />

    <EditText
        android:id="@+id/rowItem4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="none"
        android:minHeight="48dp"
        android:text="@string/row4"
        android:editable="false"
        app:layout_constraintEnd_toStartOf="@+id/qty4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rowItem3" />

    <EditText
        android:id="@+id/qty4"
        android:layout_width="91dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="QTY"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.808"
        app:layout_constraintStart_toEndOf="@+id/rowItem4"
        app:layout_constraintTop_toBottomOf="@+id/qty3" />

    <EditText
        android:id="@+id/rowItem3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="none"
        android:minHeight="48dp"
        android:text="@string/row3"
        android:editable="false"
        app:layout_constraintEnd_toStartOf="@+id/qty3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rowItem2" />

    <EditText
        android:id="@+id/qty3"
        android:layout_width="91dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="QTY"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toEndOf="@+id/rowItem3"
        app:layout_constraintTop_toBottomOf="@+id/qty2" />

    <EditText
        android:id="@+id/rowItem2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="none"
        android:minHeight="48dp"
        android:text="@string/row2"
        android:editable="false"
        app:layout_constraintEnd_toStartOf="@+id/qty2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rowItem1" />

    <EditText
        android:id="@+id/qty2"
        android:layout_width="91dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="QTY"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.808"
        app:layout_constraintStart_toEndOf="@+id/rowItem2"
        app:layout_constraintTop_toBottomOf="@+id/qty1" />

    <EditText
        android:id="@+id/inputItemName"
        android:layout_width="355dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/listItemInput"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breakPoiunt" />

    <EditText
        android:id="@+id/inputListName"
        android:layout_width="355dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/listNameInput"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/breakPoiunt"
        android:layout_width="349dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:text="@string/shoppingListBreak"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputListName" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/saveButton"
        android:backgroundTint="@color/ivory"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/ivory"
        android:text="@string/cancelButton"
        android:textColor="#212121"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"

        app:layout_constraintStart_toEndOf="@+id/saveButton" />

    <EditText
        android:id="@+id/rowItem1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="none"
        android:minHeight="48dp"
        android:text="@string/row1"
        android:editable="false"
        app:layout_constraintEnd_toStartOf="@+id/qty1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputItemName"
        tools:ignore="Deprecated" />

    <EditText
        android:id="@+id/qty1"
        android:layout_width="91dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="QTY"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rowItem1"
        app:layout_constraintTop_toBottomOf="@+id/inputItemName" />

</androidx.constraintlayout.widget.ConstraintLayout>